[project]
name = "spikeanalysis"
version = '0.0.1'
authors = [{name="Zach McKenzie", email="mineurs-torrent0x@icloud.com"}]
description = "Analysis of Spike Trains"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3 :: Only",
    "License :: OSI Approved :: GPL3 License",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Indepedent"
    ]

dependencies = [
  "numpy",
  "neo>=0.11.1",
  "tqdm",
  "scipy",
  "matplotlib",
  "pandas",
  "numba",
]

[build-system]
requires = ["setuptools>=62.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.exclude-package-data]
spikeanalysis = ["**/test/*"]

[tool.black]
line-length = 120

[tool.pytest.ini_options]
pythonpath = [
  "src/",
]

[tool.coverage.report]
exclude_also = [
  "def __repr__",
]


[tool.coverage.run]
omit = [
  "src/spikeanalysis/analysis_utils/histogram_functions.py", # histogram functions are almost all numba-based
  "src/spikeanalysis/spike_plotter.py", # no testing for actual plotting yet
  "src/spikeanalysis/intrinsic_plotter.py", # no testing for plotting yet
]
