[project]
name = "spikeanalysis"
version = '0.1.0'
authors = [{name="Zach McKenzie", email="mineurs-torrent0x@icloud.com"}]
description = "Analysis of Spike Trains"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3 :: Only",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Indepedent"
    ]

dependencies = [
  "numpy",
  "neo>=0.12.0",
  "tqdm",
  "scipy",
  "matplotlib",
  "pandas",
  "numba",
]

[build-system]
requires = ["setuptools>=62.0"]
build-backend = "setuptools.build_meta"

[project.optional-dependencies]

dev = [
  "pytest",
  "pytest-cov",
  "black",
]


[tool.setuptools.exclude-package-data]
spikeanalysis = ["**/test/*"]

[tool.black]
line-length = 120

[tool.pytest.ini_options]
pythonpath = [
  "src/",
]

[tool.coverage.report]
exclude_also = [
  "def __repr__",
]


[tool.coverage.run]
omit = [
  "src/spikeanalysis/analysis_utils/*", # utils are all numba
  "src/spikeanalysis/spike_plotter.py", # no testing for actual plotting yet
  "src/spikeanalysis/intrinsic_plotter.py", # no testing for plotting yet
  "src/spikeanalysis/plotting_functions.py", # no test for plotting yet
]
